--- a/package.json
+++ b/package.json
@@ -19,7 +19,17 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
-    "rxjs": "~6.4.0",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
+    "highcharts": "^8.0.0",
+    "highcharts-angular": "^2.4.0",
+    "highcharts-more": "^0.1.7",
+    "ng2-charts": "^2.3.0",
+    "ng2-select": "^2.0.0",
+    "ngx-bootstrap": "^5.2.0",
+    "ngx-select-ex": "^3.7.3",
+    "read-excel-file": "^4.0.5",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
