--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.13",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-zoom": "^0.7.5",
     "highcharts": "^8.0.0",
     "highcharts-angular": "^2.4.0",
     "highcharts-more": "^0.1.7",
@@ -31,6 +32,7 @@
     "read-excel-file": "^4.0.5",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
