--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "xlsx": "^0.15.4",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "serialize-javascript": ">=2.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.18",
