--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-webpack": "^0.901.0",
     "@angular/animations": "~8.2.13",
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
@@ -19,22 +20,26 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "apexcharts": "^3.19.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-zoom": "^0.7.5",
+    "eslint": "^5.16.0",
     "highcharts": "^8.0.0",
     "highcharts-angular": "^2.4.0",
     "highcharts-more": "^0.1.7",
+    "ng-apexcharts": "^1.2.3",
     "ng2-charts": "^2.3.0",
     "ng2-select": "^2.0.0",
     "ngx-bootstrap": "^5.2.0",
     "ngx-select-ex": "^3.7.3",
     "read-excel-file": "^4.0.5",
     "rxjs": "^6.4.0",
+    "serialize-javascript": ">=2.1.1",
     "tslib": "^1.10.0",
+    "vue-apexcharts": "^1.5.3",
     "xlsx": "^0.15.4",
-    "zone.js": "~0.9.1",
-    "serialize-javascript": ">=2.1.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.18",
