--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@syncfusion/ej2-angular-charts": "^18.1.48",
     "apexcharts": "^3.19.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
-    "chartjs-plugin-zoom": "^0.7.5",
+    "chartjs-plugin-zoom": "^0.7.6",
     "eslint": "^5.16.0",
     "highcharts": "^8.0.0",
     "highcharts-angular": "^2.4.0",
