--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-proj": "ng build --prod --base-href /tSNEClient/"
+    "build-proj": "node --max_old_space_size=5048 ./node_modules/@angular/cli/bin/ng build --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-webpack": "^0.901.0",
+    "@angular-devkit/build-webpack": "^0.901.6",
     "@angular/animations": "~8.2.13",
     "@angular/common": "~8.2.13",
     "@angular/compiler": "~8.2.13",
@@ -21,45 +21,38 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
-    "@syncfusion/ej2-angular-charts": "^18.1.48",
-    "apexcharts": "^3.19.0",
-    "bootstrap": "^4.4.1",
+    "@syncfusion/ej2-angular-charts": "^18.1.53",
+    "bootstrap": "^4.5.0",
+    "browserslist": "^4.12.0",
+    "caniuse-lite": "^1.0.30001062",
     "chart.js": "^2.9.3",
-    "chartjs-plugin-zoom": "^0.7.6",
     "eslint": "^5.16.0",
-    "highcharts": "^8.0.0",
-    "highcharts-angular": "^2.4.0",
-    "highcharts-more": "^0.1.7",
-    "ng-apexcharts": "^1.2.3",
-    "ng2-charts": "^2.3.0",
+    "ng2-charts": "^2.3.2",
     "ng2-select": "^2.0.0",
-    "ngx-bootstrap": "^5.2.0",
-    "ngx-select-ex": "^3.7.3",
-    "read-excel-file": "^4.0.5",
-    "rxjs": "^6.4.0",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-select-ex": "^3.7.8",
+    "rxjs": "^6.5.5",
     "serialize-javascript": ">=2.1.1",
-    "tslib": "^1.10.0",
-    "vue-apexcharts": "^1.5.3",
-    "xlsx": "^0.15.4",
+    "tslib": "^1.13.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.18",
-    "@angular/cli": "~8.3.18",
+    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular/cli": "^8.3.26",
     "@angular/compiler-cli": "~8.2.13",
     "@angular/language-service": "~8.2.13",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
