--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@syncfusion/ej2-angular-charts": "^18.1.53",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.0",
     "browserslist": "^4.12.0",
     "caniuse-lite": "^1.0.30001062",
     "chart.js": "^2.9.3",
     "eslint": "^5.16.0",
+    "firebase": "^7.15.0",
     "ng2-charts": "^2.3.2",
     "ng2-select": "^2.0.0",
     "ngx-bootstrap": "^5.6.1",
